refactor(views): double check logic against experiment protocol
Also constrain Investment model choices for the `user_bonus` and
`multiple_agreement_question_type` fields.

--- a/games/core/templates/error.html
+++ b/games/core/templates/error.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div>
-  <h1>Sorry, but your session has expired.</h1>
-  <p>Please return to the starting questionnaire.</p>
+  <h1>We're sorry, but your session has expired.</h1>
+  <h3>Please return to the starting questionnaire.</h3>
 </div>
 {% endblock content %}
