--- a/games/invest_game/templates/_coins.html
+++ b/games/invest_game/templates/_coins.html
@@ -3,7 +3,7 @@
 
 <div id="{{ label }}Coins">
   <div id="{{ label }}CoinsAmount">
-    <span id="{{ label }}CoinsAmountNum">$5</span>
+    <span id="{{ label }}CoinsAmountNum"></span>
   </div>
   {% for coin in coins %}
   <div
