--- a/games/invest_game/templates/select_respondent.html
+++ b/games/invest_game/templates/select_respondent.html
@@ -19,7 +19,7 @@
     <ul>
       <li>
         <h4>
-          Each of you – the Investor and <span class="responder-name"></span> -
+          Each of you – the Investor and <span class="responder-name"></span> –
           will be given $5.
         </h4>
       </li>
