refactor(Investment): constrain multiple choice options
Note that although we constrain options in the commit, we don't derive
form options themselves from model options. A future TODO would derive
form options directly from the Investment model.

--- a/games/invest_game/templates/question1-5.html
+++ b/games/invest_game/templates/question1-5.html
@@ -37,7 +37,7 @@
       </label>
     </div>
 
-    <p><b>How did you vote for?</b></p>
+    <p><b>Whom did you vote for?</b></p>
     <div class="radio">
       <label>
         <input type="radio" name="how_voted" value="trump" />
@@ -69,7 +69,7 @@
       </label>
     </div>
 
-    <p><b>Are your political views generally closer to</b></p>
+    <p><b>Are your political views generally closer to...</b></p>
     <div class="radio">
       <label>
         <input type="radio" name="political_views" value="democrats" />
