--- a/games/invest_game/templates/question3.html
+++ b/games/invest_game/templates/question3.html
@@ -9,7 +9,7 @@
   <form action="{% url 'invest_game:question3' %}" method="post" id="questionform" class="questionnaire-content">
     {% csrf_token %}
 
-    <p><b>Which do you think is your main source of news? </b></p>
+    <p><b>Which do you think is your main source of news?</b></p>
     <div class="radio">
       <label>
         <input type="radio" name="news_source" value="abc_nbc_cbs" />
@@ -272,19 +272,19 @@
     <div class="radio">
       <label>
         <input type="radio" name="economic_outlook" value="get_better" />
-        Get Better
+        Get better
       </label>
     </div>
     <div class="radio">
       <label>
         <input type="radio" name="economic_outlook" value="stay_the_same" />
-        Stay the Same
+        Stay the same
       </label>
     </div>
     <div class="radio">
       <label>
         <input type="radio" name="economic_outlook" value="get_worse" />
-        Get Worse
+        Get worse
       </label>
     </div>
     <div class="radio">
