refactor(views): simplify a few things
Remove the unused sign_in view, plus simplify markup in the welcome
view template.

--- a/games/invest_game/templates/select_respondent.html
+++ b/games/invest_game/templates/select_respondent.html
@@ -51,6 +51,7 @@
 {% endblock leftcontent %} 
 
 {% block rightcontent %}
+{% csrf_token %}
 <div id="RightContentContainer">
   <div id="respondent-images-container">
     <img class="respondent-img" src="{% static 'games/media/user.svg' %}" />
