refactor: incorporate round 1 review feedback

--- a/games/invest_game/templates/compare.html
+++ b/games/invest_game/templates/compare.html
@@ -28,6 +28,11 @@
         ${{received}} in total.
       </h3>
     </li>
+    <li>
+      <h3>
+        We will randomly select a response and send a check to {{respondent}}.
+      </h3>
+    </li>
   </ul>
 </div>
 <div>
