--- a/games/invest_game/templates/user_investment.html
+++ b/games/invest_game/templates/user_investment.html
@@ -37,7 +37,10 @@
       </li>
     </ul>
     <h3>
-      You now have $5. How much you would like to pass to {{respondent}}? Please use the slider at the right to make a decision.
+      You now have $5. How much you would like to pass to {{respondent}}? 
+    </h3>
+    <h3 style="color:red;">
+      Please use the slider at the right to make a decision.
     </h3>
   </div>
 </div>
