--- a/games/invest_game/templates/respondent_investment.html
+++ b/games/invest_game/templates/respondent_investment.html
@@ -9,7 +9,10 @@
       Next, guess how much {{respondent}} will give back to you. You receive a
       bonus for a good guess – if your guess is within $1 of the actual amount,
       you will earn an additional $2. How much do you think the {{respondent}}
-      has decided to give back to you? Please use the slider at the right to make a decision.
+      has decided to give back to you? 
+    </h3>
+    <h3 style="color:red;">
+      Please use the slider at the right to make a guess!
     </h3>
   </div>
 </div>
