--- a/games/static/games/css/project.css
+++ b/games/static/games/css/project.css
@@ -1,6 +1,5 @@
 body {
-  html,
-  height: 100%;
+  html,height: 100%;
 }
 
 body {
@@ -16,6 +15,7 @@ body {
 
 #content-container {
   margin-top: 24px;
+  margin-bottom: 96px;
 }
 
 #browser-warning-msg {
@@ -28,7 +28,8 @@ body {
   color: #ff0000;
 }
 
-#LeftContentContainer, #RightContentContainer {
+#LeftContentContainer,
+#RightContentContainer {
   padding: 0 16px;
 }
 
@@ -402,7 +403,8 @@ td.slim button {
   margin: 40px 0 90px 30px;
 }
 
-.questionnaire-content .radio {
+.questionnaire-content .radio,
+.questionnaire-content .checkbox {
   margin-left: 16px;
 }
 
