--- a/games/invest_game/templates/respondent_investment.html
+++ b/games/invest_game/templates/respondent_investment.html
@@ -7,8 +7,8 @@
   <div id="Instructions3">
     <h3>
       Next, guess how much {{respondent}} will give back to you. You receive a
-      bonus for a good guess – if your guess is within $1 of the actual amount,
-      you will earn an additional $2. How much do you think the {{respondent}}
+      bonus for an accurate guess – if your guess is within $1 of the actual amount,
+      you will earn an additional $2. How much do you think {{respondent}}
       has decided to give back to you? 
     </h3>
     <h3 style="color:red;">
