--- a/games/invest_game/templates/user_investment.html
+++ b/games/invest_game/templates/user_investment.html
@@ -8,28 +8,28 @@
 {% block leftcontent %}
 <div id="InstructionsDIV">
   <div id="Instructions3">
-    <h3>Here’s how the game works:</h3>
+    <h3>Reminder:</h3>
     <ul>
       <li>
         <h4>
-          Each of you – the Investor and {{respondent}} - will be given $5.
+          You and {{respondent}} will be given $5 each.
         </h4>
       </li>
       <li>
         <h4>
-          As the Investor, you will then have the opportunity to pass some, all
+          You then have the opportunity to pass some, all,
           or none of your $5 to {{respondent}}, as you like.
         </h4>
       </li>
       <li>
         <h4>
-          Then we will triple the amount you give and pass it to {{respondent}}.
+          We will triple the amount you give and pass it to {{respondent}}.
         </h4>
       </li>
       <li>
         <h4>
-          After that, {{respondent}} will give some of the money they have at
-          that point to you.
+          After that, you will discover if {{respondent}} decided to give some of the 
+          money they have to you.
         </h4>
       </li>
       <li>
