--- a/games/invest_game/templates/welcome.html
+++ b/games/invest_game/templates/welcome.html
@@ -5,9 +5,9 @@
   <div class="col-md-8 col-md-offset-2">
     <h3>
       Next, we will ask you to play a game in which you have the opportunity to
-      earn a little bit of cash. You are an Investor, investing in another
-      person called the Responder. The Responder is someone from an American
-      city who has already played their part of the game.
+      earn a little bit of cash. You are playing with another person from an 
+      American city. They have been told about the game and have already made a 
+      decision about how to respond to every one of your potential actions.
     </h3>
     <div style="text-align:center;margin-top:24px;">
       <a
