--- a/games/invest_game/templates/compare.html
+++ b/games/invest_game/templates/compare.html
@@ -11,26 +11,26 @@
       <h3>You decided to pass ${{user_investment}} to {{respondent}}.</h3>
     </li>
     <li>
-      <h3>{{respondent}} decided to return back ${{respondent_investment}}.</h3>
+      <h3>{{respondent}} decided to return ${{respondent_investment}}.</h3>
     </li>
     <li>
       <h3>You guessed that {{respondent}} would return ${{respondent_investment_guess}}.</h3>
     </li>
     <li>
       <h3>
-        Your guess is {{guess_flag}} the $1 of how much {{respondent}} decided
+        Your guess is {{guess_flag}} $1 of how much {{respondent}} decided
         to give back to you.
       </h3>
     </li>
     <li>
       <h3>
         Therefore you earned ${{user_left}} + ${{respondent_investment}} + ${{user_bonus}} =
-        ${{received}} in total.
+        ${{received}} in total. Dynata will send you a check after you finish today's survey.
       </h3>
     </li>
     <li>
       <h3>
-        We will randomly select a response and send a check to {{respondent}}.
+        {{respondent}} will also receive a check!
       </h3>
     </li>
   </ul>
